--- a/i18n/docs/appstore_cs.txt
+++ b/i18n/docs/appstore_cs.txt
@@ -1,11 +1,11 @@
-Zabezpečte vaše bitcoiny open-source, více-podpisovou peněženkou od BitPay. 
-Uživatelé Copay mohou uchovávat své prostředky jednotlivě nebo bezpečně finance sdílet so statními uživatele pomocí více-podpisových peněženek, které eliminují neoprávněné platby, protože ke schválení vyžadují více podpisů. Několik tipů pro využívání Copay peněženky s ostatními:
+Zabezpečte vaše groestlcoiny open-source, více-podpisovou peněženkou od BitPay. 
+Uživatelé GroestlPay mohou uchovávat své prostředky jednotlivě nebo bezpečně finance sdílet so statními uživatele pomocí více-podpisových peněženek, které eliminují neoprávněné platby, protože ke schválení vyžadují více podpisů. Několik tipů pro využívání GroestlPay peněženky s ostatními:
 
 Úspory pro výlety nebo společná peněženka s přáteli 
 Přehledy rodinných nákladů a úhrad
 Správa obchodů, klubů a zdrojů či nákladů organizací
 
-Vytvořili jsme následující funkce pro tuto verzi Copay pro bitcoin peněženku, která je dostupná a bezpečná:
+Vytvořili jsme následující funkce pro tuto verzi GroestlPay pro groestlcoin peněženku, která je dostupná a bezpečná:
 
 Správa a tvorba více peněženek 
 Intuitivní více-podpisové zabezpečení pro osobní nebo sdílené peněženky
@@ -14,10 +14,10 @@ Hierarchicky deterministické (HD) vytváření adres a záloh peněženky
 Device-based zabezpečení: všechny soukromé klíče jsou uloženy na zařízení, ne v Cloud
 Podpora Groestlcoin test sítě
 Synchronizovaný přístup všech hlavních mobilních a Pc platforem
-Platební protokol (BIP70-BIP73): snadno identifikovatelný platební požadavek a bezpečně ověřitelné platby bitcoinem
-Podpora pro více než 150 měn a denominace BTC nebo bitů
+Platební protokol (BIP70-BIP73): snadno identifikovatelný platební požadavek a bezpečně ověřitelné platby groestlcoinem
+Podpora pro více než 150 měn a denominace GRS nebo bitů
 E-mailová upozornění pro platby a převody
 Přizpůsobitelné pojmenování a podbarvení peněženky
 9 podporovaných jazyků (EN, CS, FR, DE, IT, ES, JA, PL, RU)
 
-Copay je bezplatný open-source software, fungující na decentralizovaných serverech, není tedy potřeba spoléhat na společnost pro trvalou podporu. Kdokoliv může prohlédnout nebo přispět k Copay zdrojovému kódu na GitHub (https://github.com/bitpay/copay). 
+GroestlPay je bezplatný open-source software, fungující na decentralizovaných serverech, není tedy potřeba spoléhat na společnost pro trvalou podporu. Kdokoliv může prohlédnout nebo přispět k GroestlPay zdrojovému kódu na GitHub (https://github.com/Groestlcoin/GroestlPay). 
