--- a/i18n/docs/appstore_el.txt
+++ b/i18n/docs/appstore_el.txt
@@ -1,11 +1,11 @@
 Εξασφαλίστε τα Groestlcoin σας με τους δικούς σας όρους με ένα ανοιχτού κώδικα, πορτοφόλι πολλών υπογραφών από την BitPay. 
-Οι χρήστες copay μπορούν να κρατούν και να διαχειρίζονται κεφάλαια ατομικά ή να τα μοιράζονται με ασφάλεια με άλλους χρήστες με το πορτοφόλι πολλών υπογραφών, το οποίο εμποδίζει τις μη εξουσιοδοτημένες πληρωμές και απαιτεί πολλαπλές εγκρίσεις. Εδώ είναι μερικοί τρόποι με τους οποίους το copay μπορεί να χρησιμοποιηθεί σε συνδιασμό με άλλους ανθρώπους:
+Οι χρήστες GroestlPay μπορούν να κρατούν και να διαχειρίζονται κεφάλαια ατομικά ή να τα μοιράζονται με ασφάλεια με άλλους χρήστες με το πορτοφόλι πολλών υπογραφών, το οποίο εμποδίζει τις μη εξουσιοδοτημένες πληρωμές και απαιτεί πολλαπλές εγκρίσεις. Εδώ είναι μερικοί τρόποι με τους οποίους το GroestlPay μπορεί να χρησιμοποιηθεί σε συνδιασμό με άλλους ανθρώπους:
 
 Για να αποθηκεύσετε για τις διακοπές σας ή να κάνετε κοινές αγορές με τους φίλους σας 
 Για να παρακολουθήσετε τις οικογενειακές δαπάνες και τα επιδόμάτα
 Για τη διαχείριση επιχειρήσεων, κλαμπ, ή κεφάλαια οργανισμών και έξοδα οργάνωσης
 
-Χτίσαμε τα ακόλουθα χαρακτηριστικά σε αυτή την έκδοση του copay για ένα πορτοφόλι Groestlcoin που δεν θέτει σε κίνδυνο την ασφάλεια ή την προσβασιμότητα:
+Χτίσαμε τα ακόλουθα χαρακτηριστικά σε αυτή την έκδοση του GroestlPay για ένα πορτοφόλι Groestlcoin που δεν θέτει σε κίνδυνο την ασφάλεια ή την προσβασιμότητα:
 
 Δημιουργία πολλαπλών πορτοφολιών και διαχείριση εντός εφαρμογής 
 Διαισθητική ασφαλείας πολλών υπογραφών για προσωπικά ή κοινόχρηστα πορτοφόλια
@@ -15,9 +15,9 @@
 Υποστήριξη για πορτοφόλια του δοκιμαστικού δικτύου Groestlcoin
 Σύγχρονισμένη πρόσβαση σε όλες τις μεγάλες πλατφόρμες, φορητές και επιτραπέζιες
 Πρωτόκολλο πληρωμής (BIP70-BIP73) το οποίο υποστηρίζει: εύκολα αναγνωρίσιμες αιτήσεις πληρωμής και διασφάλισμένες και επαληθεύσιμες πληρωμές με Groestlcoin
-Υποστήριξη για επιλογές τιμολόγησης 150+ νομισμάτων και ονομαστική αξία σε BTC ή bits
+Υποστήριξη για επιλογές τιμολόγησης 150+ νομισμάτων και ονομαστική αξία σε GRS ή bits
 Ειδοποιήσεις μέσω email για πληρωμές και μεταφορές
 Προσαρμόσιμο όνομα πορτοφολιών και χρώματα φόντου
 9 supported languages (EN, CS, FR, DE, IT, ES, JA, PL, RU)
 
-Το Copay είναι ελεύθερο και ανοικτού κώδικα λογισμικό το οποίο τρέχει σε μη ιδιόκτητους διακομιστές, έτσι δεν υπάρχει καμία ανάγκη να στηριχθεί σε οποιαδήποτε εταιρεία για να έχει συνεχή υποστήριξη. Ο καθένας μπορεί να αναθεωρήσει ή να συμβάλει στον πηγαίο κώδικα του copay στο GitHub (https://github.com/bitpay/copay). 
+Το GroestlPay είναι ελεύθερο και ανοικτού κώδικα λογισμικό το οποίο τρέχει σε μη ιδιόκτητους διακομιστές, έτσι δεν υπάρχει καμία ανάγκη να στηριχθεί σε οποιαδήποτε εταιρεία για να έχει συνεχή υποστήριξη. Ο καθένας μπορεί να αναθεωρήσει ή να συμβάλει στον πηγαίο κώδικα του GroestlPay στο GitHub (https://github.com/Groestlcoin/GroestlPay). 
