--- a/i18n/docs/appstore_ja.txt
+++ b/i18n/docs/appstore_ja.txt
@@ -1,11 +1,11 @@
 ビットコインにおける高度なセキュリティーを手軽に扱えるオープンソースマルチシグネチャウォレットです。 
-Copayは個人のご利用はもちろんのこと、複数人によるウォレット管理の権限分散も簡単なウォレットソフトを通してご活用いただけます。 例えば：
+GroestlPayは個人のご利用はもちろんのこと、複数人によるウォレット管理の権限分散も簡単なウォレットソフトを通してご活用いただけます。 例えば：
 
 友達との旅行や買い物のために透明性抜群の環境で貯蓄したい時 
 家族のお小遣いや日常の家計簿管理がしたい時
 ビジネス・クラブ・団体の資金や財産管理を透明な管理分散がしたい時
 
-下記の機能でセキュリティーも利便性も妥協しない最高のウォレットをCopayでご提供させていただきました：
+下記の機能でセキュリティーも利便性も妥協しない最高のウォレットをGroestlPayでご提供させていただきました：
 
 ■ 複数のウォレットの作成・管理がアプリ内で管理可能 
 ■ マルチシグネチャのウォレット分散管理でも個人ウォレットでも使いやすさ抜群
@@ -15,9 +15,9 @@ Copayは個人のご利用はもちろんのこと、複数人によるウォレ
 ■ ビットコインの開発テスト用ネットワークにも対応
 ■ メジャーなプラットフォーム全てに対応 (Windows, Mac, Linux, Android, iPhone, Windows Phone)
 ■ ペイメントプロトコルにも対応(BIP 70-73)、暗号通信と証明書を使ったマーチャントとの安全なペイメントの実現
-■ 世界中の150個以上の通貨の表示に対応、自国通貨との為替レートを計算する必要なし。ビットコインの単位も BTC と bits にも対応
+■ 世界中の150個以上の通貨の表示に対応、自国通貨との為替レートを計算する必要なし。ビットコインの単位も GRS と bits にも対応
 ■ ペイメントや提案のメール通知も可能
 ■ ウォレットごとの背景色設定や通称設定も可能でカスタマイズ性抜群
 ■ 9ヶ国語対応 (英日仏西伊独捷葡露)
 
-Copayは永久無料でオープンソースのソフトです。サーバーもオープンソースなので、独自運用や法人の利用やソース流用は許可します。 ソースをご覧の際に間違いなどが見つかった場合、Githubにてご報告・ソース修正のプルリクエストなどをお願いします。(https://github.com/bitpay/copay) 
+GroestlPayは永久無料でオープンソースのソフトです。サーバーもオープンソースなので、独自運用や法人の利用やソース流用は許可します。 ソースをご覧の際に間違いなどが見つかった場合、Githubにてご報告・ソース修正のプルリクエストなどをお願いします。(https://github.com/Groestlcoin/GroestlPay) 
