--- a/i18n/po/cs.po
+++ b/i18n/po/cs.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: cs\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,14 +28,14 @@ msgid "[Balance Hidden]"
 msgstr "[skrytý zůstatek]"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} bude odečteno jako poplatek Groestlcoinové síti"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr "{{feeRateStr}} z transakce"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}} z {{index.n}}"
@@ -53,7 +53,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}} z {{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* Návrh k platbě může být odstraněn pokud 1) jste jej vytvořil(a) a žádný spoluplátce jej nepodepsal 2) Uběhlo 24 hodin od vytvoření návrhu."
 
 #: public/views/includes/terms.html
@@ -61,28 +61,28 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR EN
 msgstr "<b>POKUD ZTRATÍTE PŘÍSTUP K VAŠI SPOLUPLÁTCOVSKÉ PENĚŽENCE NEBO VAŠÍM ŠIFROVANÝM KLÍČŮM A NEMÁTE ULOŽENOU ZÁLOHU VAŠI PENĚŽENKY A HESLEM ZVLÁŠTĚ, BERETE NA VĚDOMÍ ŽE VŠECHNY CAPRICOINY ULOŽENÉ V TÉTO SPOLUPLÁTCOVSKÉ PENĚŽENCE NEBUDOU DOSTUPNÉ. </b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
 msgstr ""
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "A vícepodpisová Groestlcoin peněženka"
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr "O Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -151,7 +151,7 @@ msgstr "Název pro <i>{{index.walletName}}</i>"
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr "Všichni spoluúčastníci překladů Groestlcoin Mobile Wallet jsou vítání. Přihlaště se na crowdin.com a přidejte se k projektu Groestlcoin Mobile Wallet na"
 
 #: public/views/includes/terms.html
@@ -182,7 +182,7 @@ msgstr "Částka v"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Opravdu si přejete odstranit tuto peněženku?"
@@ -286,13 +286,13 @@ msgstr "Vypočítávám poplatek"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "Zrušit"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr "Zrušit a odstranit peněženku"
 
@@ -353,7 +353,7 @@ msgstr "Hash softwaru"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "Pokračovat"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr "Spoluplátce je již v peněžence"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr "Spoluplátce pro tento návrh již hlasoval"
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
 msgstr "Data spoluplátce nesouhlasí"
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
+msgid "GroestlPayers"
 msgstr "Spoluplátci"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "Vytvořit"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "Vytvořit peněženku {{requiredCopayers}}-z-{{totalCopayers}}"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "Vytvořit peněženku {{requiredGroestlPayers}}-z-{{totalGroestlPayers}}"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "Datum"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Dešifrování papírové peněženky může na tomto zařízení trvat okolo 5 minut, buďte prosím trpělivý a nechejte aplikaci otevřenou."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "Smazat a vytvořit novou"
 
@@ -892,8 +892,8 @@ msgstr "Neplatná adresa"
 msgid "Invalid derivation path"
 msgstr "Neplatná cesta derivace"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Pozvánka ke sdílené Groestlcoin Mobile Wallet Peněžence"
 
 #: public/views/translators.html
@@ -913,9 +913,9 @@ msgstr "John"
 msgid "Join"
 msgstr "Spojit"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Propojení mé Groestlcoin Mobile Wallet peněženky. Toto je kód pozvánky: {{secret}} Groestlcoin Mobile Wallet je možné stáhnout do telefonu nebo počítače na https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Propojení mé Groestlcoin Mobile Wallet peněženky. Toto je kód pozvánky: {{secret}} Groestlcoin Mobile Wallet je možné stáhnout do telefonu nebo počítače na https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -942,7 +942,7 @@ msgid "Last Wallet Addresses"
 msgstr "Poslední adresa peněženky"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr "Dozvědět se více o zálohování Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesFee.html
@@ -973,7 +973,7 @@ msgstr "Shody:"
 msgid "me"
 msgstr "já"
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Návrh platby byl odmítnut"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr "Návrh platby odmítnut spoluplátcem"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr "Návrh platby byl podepsán spoluplátcem"
 
 #: public/views/walletHome.html
@@ -1261,7 +1261,7 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr "Potvrďte pořadí slov pro potvrzení správnosti zálohy."
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr "Pro tuto funkci je potřeba aktualizovat Groestlcoin Mobile Wallet"
 
 #: public/views/uri.html
@@ -1301,7 +1301,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr "Soukromý klíč je šifrovaný, nelze podepsat"
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr "Oznámení pro Groestlcoin Mobile Wallet jsou v současné době zakázána. Povolte v nastavení aplikace."
 
 #: public/views/export.html
@@ -1467,7 +1467,7 @@ msgid "Send addresses by email"
 msgstr "Odeslat adresy emailem"
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr "Odeslat GRS"
 
 #: public/views/export.html
@@ -1531,12 +1531,12 @@ msgstr "Nastavení"
 msgid "Share address"
 msgstr "Sdílet adresu"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Sdílet pozvánku"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
 msgstr "Sdílet tuto pozvánku se spoluplátci"
 
 #: public/views/walletHome.html
@@ -1596,7 +1596,7 @@ msgstr ""
 msgid "Spending Passwords do not match"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1666,7 +1666,7 @@ msgid "The request could not be understood by the server"
 msgstr "Požadavek nebyl serverem pochopen"
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "Tento software nepředstavuje účet kde jiné třetí strany slouží jako finanční zprostředkovatelé nebo správci vašeho Groestlcoin."
 
 #: public/views/includes/terms.html
@@ -1677,7 +1677,7 @@ msgstr "Software který hodláte začít používat je zdarma, open-source, víc
 msgid "The spend proposal is not pending"
 msgstr "Platební návrh neočekává další schválení"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "Peněženka \"{{walletName}}\" byla odstraněna"
@@ -1695,7 +1695,7 @@ msgid "There are no wallets to make this payment"
 msgstr "Pro platbu je potřeba založit peněženku"
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
+msgid "There is a new version of GroestlPay. Please update"
 msgstr "Existuje nová verze Groestlcoin Mobile Wallet. Proveďte aktualizaci"
 
 #: src/js/controllers/import.js
@@ -1742,7 +1742,7 @@ msgid "Total Locked Balance"
 msgstr "Blokovaný zůstatek"
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of GroestlPayers"
 msgstr "Počet spoluplátců"
 
 #: src/js/services/fingerprintService.js
@@ -1819,8 +1819,8 @@ msgstr "Verze"
 msgid "View"
 msgstr "Pohled"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
 msgstr "Vyčkávání na spoluplátce"
 
 #: src/js/services/onGoingProcess.js
@@ -1831,7 +1831,7 @@ msgstr ""
 msgid "Waiting for Trezor..."
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "Vyčkávání..."
 
@@ -1840,7 +1840,7 @@ msgid "Wallet already exists"
 msgstr "Peněženka již existuje"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
+msgid "Wallet already in GroestlPay"
 msgstr ""
 
 #: public/views/preferencesInformation.html
@@ -1855,7 +1855,7 @@ msgstr "Export peněženky"
 msgid "Wallet Id"
 msgstr "Id peněženky"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Peněženka je neúplná a chybná"
 
