--- a/i18n/po/de.po
+++ b/i18n/po/de.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: de\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,14 +28,14 @@ msgid "[Balance Hidden]"
 msgstr "[Guthaben versteckt]"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} wird als Netzwerkgebühr abgezogen"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr "{{feeRateStr}} der Transaktion"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-von-{{index.n}}"
@@ -53,7 +53,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-von-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* Ein Zahlungsvorschlag kann gelöscht werden, wenn 1) Du diesen erzeugt hast und noch kein anderer Groestlcoin Mobile Walleter unterschrieben hat, oder 2) 24 Stunden vergangen sind, seit der Vorschlag erstellt wurde."
 
 #: public/views/includes/terms.html
@@ -61,28 +61,28 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR EN
 msgstr "<b>WENN DER ZUGRIFF AUF DAS Groestlcoin Mobile Wallet WALLET ODER DEN VERSCHLÜSSELTEN PRIVATEN SCHLÜSSELN VERLOREN GEHT UND KEINE SICHERUNG DES WALLETS UND KORRESPONDIERENDEM PASSWORT EXISTIERT, DANN WIRD BESTÄTIGT UND AKZEPTIERT, DASS AUF ALLE MIT DIESEM WALLET VERBUNDENEN CAPRICOIN KEIN ZUGRIFF MEHR MÖGLICH IST.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
 msgstr "<b>ODER</b> 1 Exportdatei des Wallets und und die noch benötigten Wallet-Wiederherstellungsphrasen (z.B. für ein 3-5 Wallet: 1 Exportdatei + 2 Wallet-Wiederherstellungsphrasen anderer Groestlcoin Mobile Walleter)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
 msgstr "<b>ODER</b> die Wallet-Wiederherstellungsphrasen <b>aller</b> Groestlcoin Mobile Walleter des Wallets"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
 msgstr "<b>ODER</b> die Wallet-Wiederherstellungsphrasen <b>aller</b> Groestlcoin Mobile Walleter des Wallets"
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "Ein Groestlcoin Wallet mit Mehrfachunterschriften"
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr "Über Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -151,7 +151,7 @@ msgstr "Alias für <i>{{index.walletName}}</i>"
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr "Alle Beiträge zur Übersetzung von Groestlcoin Mobile Wallet sind willkommen. Melde Dich bei crowdin.com an verbinde Dich mit dem Groestlcoin Mobile Wallet-Projekt über"
 
 #: public/views/includes/terms.html
@@ -182,7 +182,7 @@ msgstr "Betrag in"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "Sind Sie sicher, dass Sie die Wiederherstellungsphrase löschen möchten?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Soll das Wallet wirklich gelöscht werden?"
@@ -286,13 +286,13 @@ msgstr "Mining-Fee Berechnung"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "Abbruch"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr "Abbrechen und Brieftasche löschen"
 
@@ -353,7 +353,7 @@ msgstr "Hash übertragen"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "Weiter"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr "Groestlcoin Mobile Walleter nimmt bereits teil"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr "Groestlcoin Mobile Walleter hat schon für diesen Zahlungsvorschlag angestimmt"
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
 msgstr "Groestlcoin Mobile Walleter Datenkonflikt"
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
+msgid "GroestlPayers"
 msgstr "Groestlcoin Mobile Walleter"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "Erzeugen"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "Ein {{requiredCopayers}}-von-{{totalCopayers}} Wallet erzeugen"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "Ein {{requiredGroestlPayers}}-von-{{totalGroestlPayers}} Wallet erzeugen"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "Datum"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Das Entschlüsseln eines Paperwallets kann auf diesem Gerät bis zu 5 Minuten dauern. Bitte abwarten und die App nicht beenden."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "Löschen und neues Wallet erzeugen"
 
@@ -892,8 +892,8 @@ msgstr "Ungültige Adresse"
 msgid "Invalid derivation path"
 msgstr "Ungültige Ableitungsstruktur"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Einladung zum Groestlcoin Mobile Wallet-Wallet teilen"
 
 #: public/views/translators.html
@@ -913,9 +913,9 @@ msgstr "Sascha"
 msgid "Join"
 msgstr "Teilnehmen"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Groestlcoin Mobile Wallet Wallet beitreten. Hier ist der Einladungscode: {{secret}} Die Desktopversion oder die App fürs Handy kann auf https://copay.io heruntergeladen werden"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Groestlcoin Mobile Wallet Wallet beitreten. Hier ist der Einladungscode: {{secret}} Die Desktopversion oder die App fürs Handy kann auf https://GroestlPay.io heruntergeladen werden"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -942,7 +942,7 @@ msgid "Last Wallet Addresses"
 msgstr "Letzte Wallet-Adressen"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr "Erfahren Sie mehr über Groestlcoin Mobile Wallet-Sicherungen"
 
 #: public/views/preferencesFee.html
@@ -973,7 +973,7 @@ msgstr "Übereinstimmungen:"
 msgid "me"
 msgstr "Ich"
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Zahlungsvorschlag abgelehnt"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr "Zahlungsvorschlag wurde vom Groestlcoin Mobile Walleter abgelehnt"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr "Zahlungsvorschlag wurde vom Groestlcoin Mobile Walleter abgezeichnet"
 
 #: public/views/walletHome.html
@@ -1261,7 +1261,7 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr "Bitte tippen Sie auf die Wörter, um zu bestätigen, dass Ihre Backup-Phrase richtig geschrieben ist."
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr "Bitte Groestlcoin Mobile Wallet aktualisieren, um diese Aktion auszuführen"
 
 #: public/views/uri.html
@@ -1301,7 +1301,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr "Der private Schlüssel ist verschlüsselt, signieren ist nicht möglich"
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr "Pushbenachrichtigungen für Groestlcoin Mobile Wallet sind derzeit deaktiviert. Aktivieren sie Sie in den Einstellungen."
 
 #: public/views/export.html
@@ -1467,7 +1467,7 @@ msgid "Send addresses by email"
 msgstr "Adressen per e-Mail versenden"
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr "Groestlcoins senden"
 
 #: public/views/export.html
@@ -1531,12 +1531,12 @@ msgstr "Einstellungen"
 msgid "Share address"
 msgstr "Adresse teilen"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Einladung teilen"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
 msgstr "Einladung mit Groestlcoin Mobile Walletern teilen"
 
 #: public/views/walletHome.html
@@ -1596,7 +1596,7 @@ msgstr "Berechtigungscode erforderlich"
 msgid "Spending Passwords do not match"
 msgstr "Berechtigungscodes stimmen nicht überein"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1666,7 +1666,7 @@ msgid "The request could not be understood by the server"
 msgstr "Die Anforderung konnte nicht vom Server interpretiert werden"
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "Die Software erzeugt kein Benutzerkonto, oder sonstige Dritte als Finanzvermittler oder Verwalter der Groestlcoin fungieren."
 
 #: public/views/includes/terms.html
@@ -1677,7 +1677,7 @@ msgstr "Die Software, die genutzt werden soll, fungiert als freies, quelloffenes
 msgid "The spend proposal is not pending"
 msgstr "Der Zahlungsvorschlag ist nicht ausstehend"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "Wallet \"{{walletName}}\" wurde gelöscht"
@@ -1695,7 +1695,7 @@ msgid "There are no wallets to make this payment"
 msgstr "Es gibt keine Wallets, um diese Zahlung auszuführen"
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
+msgid "There is a new version of GroestlPay. Please update"
 msgstr "Es gibt eine neue Version von Groestlcoin Mobile Wallet. Bitte aktualisieren"
 
 #: src/js/controllers/import.js
@@ -1742,7 +1742,7 @@ msgid "Total Locked Balance"
 msgstr "Ingesamt gesperrter Gesamtsaldo"
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of GroestlPayers"
 msgstr "Gesamtanzahl der Groestlcoin Mobile Walleter"
 
 #: src/js/services/fingerprintService.js
@@ -1819,9 +1819,9 @@ msgstr "Version"
 msgid "View"
 msgstr "Ansicht"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "Warte auf copayer"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
+msgstr "Warte auf GroestlPayer"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1831,7 +1831,7 @@ msgstr "Warte auf Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "Warte auf Trezor..."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "Warte..."
 
@@ -1840,7 +1840,7 @@ msgid "Wallet already exists"
 msgstr "Wallet exstiert bereits"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
+msgid "Wallet already in GroestlPay"
 msgstr "Wallet ist bereits in Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesInformation.html
@@ -1855,7 +1855,7 @@ msgstr "Wallet-Export"
 msgid "Wallet Id"
 msgstr "Wallet-Id"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Wallet unvollständig oder defekt"
 
