--- a/i18n/po/en.po
+++ b/i18n/po/en.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: en\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,10 +23,10 @@ msgid "(Trusted)"
 msgstr "(Trusted)"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} will be deducted for Groestlcoin networking fees"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/walletHome.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-of-{{index.n}}"
@@ -40,36 +40,36 @@ msgid "{{len}} wallets imported. Funds scanning in progress. Hold on to see upda
 msgstr "{{len}} wallets imported. Funds scanning in progress. Hold on to see updated balance"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 
 #: public/views/disclaimer.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
-msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
+msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
-msgstr "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
-msgstr "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
 
 #: public/views/splash.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "A multisignature Groestlcoin wallet"
 
 #: public/views/preferences.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr "About Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -116,7 +116,7 @@ msgid "Alias for <i>{{index.walletName}}</i>"
 msgstr "Alias for <i>{{index.walletName}}</i>"
 
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr "All contributions to Groestlcoin Mobile Wallet's translation are welcome. Sign up at crowdin.com and join the Groestlcoin Mobile Wallet project at"
 
 #: public/views/disclaimer.html
@@ -156,7 +156,7 @@ msgstr "Applying changes"
 msgid "Are you sure you want to delete the backup words?"
 msgstr "Are you sure you want to delete the backup words?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Are you sure you want to delete this wallet?"
@@ -232,11 +232,11 @@ msgstr "Broadcasting transaction"
 msgid "Browser unsupported"
 msgstr "Browser unsupported"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/walletHome.html
 #: public/views/modals/confirmation.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
@@ -268,7 +268,7 @@ msgstr "Choose a wallet to send funds"
 
 #: public/views/includes/topbar.html
 #: public/views/modals/advancedSend.html
-#: public/views/modals/copayers.html
+#: public/views/modals/GroestlPayers.html
 #: public/views/modals/customized-amount.html
 #: public/views/modals/paypro.html
 #: public/views/modals/scanner.html
@@ -285,7 +285,7 @@ msgid "Commit hash"
 msgstr "Commit hash"
 
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -308,22 +308,22 @@ msgid "Connecting to {{join.hwWallet}} Wallet..."
 msgstr "Connecting to {{join.hwWallet}} Wallet..."
 
 #: src/js/services/bwsError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr "Groestlcoin Mobile Walleter already in this wallet"
 
 #: src/js/services/bwsError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr "Groestlcoin Mobile Walleter already voted on this spend proposal"
 
 #: src/js/services/bwsError.js
-msgid "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
 msgstr "Groestlcoin Mobile Walleter data mismatch"
 
-#: public/views/modals/copayers.html
-msgid "Copayers"
+#: public/views/modals/GroestlPayers.html
+msgid "GroestlPayers"
 msgstr "Groestlcoin Mobile Walleters"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/walletHome.js
 msgid "Copied to clipboard"
@@ -422,8 +422,8 @@ msgid "Create"
 msgstr "Create"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -463,7 +463,7 @@ msgstr "Date"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "Delete it and create a new one"
 
@@ -679,7 +679,7 @@ msgid "Hardware Wallet"
 msgstr "Hardware Wallet"
 
 #: public/views/import.html
-msgid "Have a Backup from Copay v0.9?"
+msgid "Have a Backup from GroestlPay v0.9?"
 msgstr "Have a Backup from Groestlcoin Mobile Wallet v0.9?"
 
 #: public/views/create.html
@@ -767,8 +767,8 @@ msgstr "Invalid"
 msgid "Invalid address"
 msgstr "Invalid address"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Invitation to share a Groestlcoin Mobile Wallet Wallet"
 
 #: public/views/translators.html
@@ -788,9 +788,9 @@ msgstr "John"
 msgid "Join"
 msgstr "Join"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Join my Groestlcoin Mobile Wallet wallet. Here is the invitation code: {{secret}} You can download Groestlcoin Mobile Wallet for your phone or desktop at https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Join my Groestlcoin Mobile Wallet wallet. Here is the invitation code: {{secret}} You can download Groestlcoin Mobile Wallet for your phone or desktop at https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -813,7 +813,7 @@ msgid "Last Wallet Addresses"
 msgstr "Last Wallet Addresses"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr "Learn more about Groestlcoin Mobile Wallet backups"
 
 #: public/views/importLegacy.html
@@ -844,8 +844,8 @@ msgstr "Make a payment to"
 msgid "me"
 msgstr "me"
 
-#: public/views/includes/copayers.html
-#: public/views/modals/copayers.html
+#: public/views/includes/GroestlPayers.html
+#: public/views/modals/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 msgid "Me"
@@ -1011,11 +1011,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Payment Proposal Rejected"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr "Payment Proposal Rejected by Groestlcoin Mobile Walleter"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr "Payment Proposal Signed by Groestlcoin Mobile Walleter"
 
 #: public/views/walletHome.html
@@ -1083,7 +1083,7 @@ msgid "Please enter the wallet seed"
 msgstr "Please enter the wallet seed"
 
 #: src/js/services/bwsError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr "Please upgrade Groestlcoin Mobile Wallet to perform this action"
 
 #: src/js/controllers/import.js
@@ -1309,13 +1309,13 @@ msgstr "settings"
 msgid "Share address"
 msgstr "Share address"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Share invitation"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
+msgstr "Share this invitation with your GroestlPayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments. To protect your privacy, new addresses are generated automatically once you use them."
@@ -1369,7 +1369,7 @@ msgstr "Spend proposal not found"
 msgid "Still not done"
 msgstr "Still not done"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1432,7 +1432,7 @@ msgid "The seed could require a passphrase to be imported"
 msgstr "The seed could require a passphrase to be imported"
 
 #: public/views/disclaimer.html
-msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your Groestlcoin."
 
 #: public/views/disclaimer.html
@@ -1443,7 +1443,7 @@ msgstr "The software you are about to use functions as a free, open source, and 
 msgid "The spend proposal is not pending"
 msgstr "The spend proposal is not pending"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "The wallet \"{{walletName}}\" was deleted"
@@ -1497,8 +1497,8 @@ msgid "Total Locked Balance"
 msgstr "Total Locked Balance"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "Total number of copayers"
+msgid "Total number of GroestlPayers"
+msgstr "Total number of GroestlPayers"
 
 #: public/views/modals/tx-details.html
 msgid "Transaction"
@@ -1568,11 +1568,11 @@ msgstr "Version"
 msgid "View"
 msgstr "View"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "Waiting for copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
+msgstr "Waiting for GroestlPayers"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "Waiting..."
 
@@ -1593,7 +1593,7 @@ msgid "Wallet Already Imported:"
 msgstr "Wallet Already Imported:"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay:"
+msgid "Wallet already in GroestlPay:"
 msgstr "Wallet already in Groestlcoin Mobile Wallet:"
 
 #: public/views/preferencesInformation.html
@@ -1608,7 +1608,7 @@ msgstr "Wallet Export"
 msgid "Wallet Id"
 msgstr "Wallet Id"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Wallet incomplete and broken"
 
