--- a/i18n/po/it.po
+++ b/i18n/po/it.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: it\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,14 +28,14 @@ msgid "[Balance Hidden]"
 msgstr "[Fondi Nascosti]"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} verranno detratti come commissione del network"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr "{{feeRateStr}} della transazione"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-di-{{index.n}}"
@@ -53,36 +53,36 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-di-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* Una proposta di pagamento può essere eliminata se 1) Tu sei il creatore e nessun altro copayer ha firmato, oppure 2) Sono passate 24 ore da quando la proposta e' stata creata."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* Una proposta di pagamento può essere eliminata se 1) Tu sei il creatore e nessun altro GroestlPayer ha firmato, oppure 2) Sono passate 24 ore da quando la proposta e' stata creata."
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>Se perdi l'accesso al tuo portafoglio Groestlcoin Mobile Wallet o tuo crittografato chiavi PRIVATE e non hai archiviato separatamente una copia di BACKUP del vostro portafoglio e la corrispondente PASSWORD, tu riconosci e accetti che qualsiasi CAPRICOIN associato con quel portafoglio Groestlcoin Mobile Wallet diventerà inaccessibile.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
-msgstr "<b>O</b> 1 file di portafoglio esportato e il restante quorum di frasi di recupero portafoglio (ad esempio in un 3-5 portafogli: 1 file di portafoglio esportato + 2 frasi di recupero portafoglio di qualsiasi degli altri copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
+msgstr "<b>O</b> 1 file di portafoglio esportato e il restante quorum di frasi di recupero portafoglio (ad esempio in un 3-5 portafogli: 1 file di portafoglio esportato + 2 frasi di recupero portafoglio di qualsiasi degli altri GroestlPayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
-msgstr "<b>O</b> la frase di recupero di portafoglio di <b>tutti</b> i copayers nel portafoglio"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>O</b> la frase di recupero di portafoglio di <b>tutti</b> i GroestlPayers nel portafoglio"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
-msgstr "<b>O</b> le frasi di recupero di portafoglio di <b>tutti</b> i copayers nel portafoglio"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>O</b> le frasi di recupero di portafoglio di <b>tutti</b> i GroestlPayers nel portafoglio"
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "Un portafoglio Groestlcoin multifirma"
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr "Circa Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -151,7 +151,7 @@ msgstr "Alias per <i>{{index.walletName}}</i>"
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr "Tutti i contributori alla traduzione di Groestlcoin Mobile Wallet sono i benvenuti. Iscriviti a crowdin e unisciti al progetto Groestlcoin Mobile Wallet presso"
 
 #: public/views/includes/terms.html
@@ -182,7 +182,7 @@ msgstr "Importo in"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "Sei sicuro di voler cancellare la frase di recupero?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Sei sicuro di voler eliminare questo portafoglio?"
@@ -286,13 +286,13 @@ msgstr "Calcolo commissione"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "Annulla"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr "Cancella e rimuovi il portafoglio"
 
@@ -353,7 +353,7 @@ msgstr "Commit hash"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "Continua"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr "Groestlcoin Mobile Walleter già in questo portafoglio"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr "Groestlcoin Mobile Walleter già votato su questa proposta"
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
-msgstr "Mancata corrispondenza dei dati del copayer"
+msgid "GroestlPayer data mismatch"
+msgstr "Mancata corrispondenza dei dati del GroestlPayer"
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
+msgid "GroestlPayers"
 msgstr "Groestlcoin Mobile Walleters"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "Crea"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "Crea portafoglio {{requiredCopayers}}-di-{{totalCopayers}}"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "Crea portafoglio {{requiredGroestlPayers}}-di-{{totalGroestlPayers}}"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "Data"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Decodificare un portafoglio potrebbe impiegare circa 5 minuti su questo dispositivo. Attendere e tenere l'applicazione aperta."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "Eliminalo e creane uno nuovo"
 
@@ -892,8 +892,8 @@ msgstr "Indirizzo non valido"
 msgid "Invalid derivation path"
 msgstr "Percorso di derivazione non valido"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Invito a condividere un portafoglio Groestlcoin Mobile Wallet"
 
 #: public/views/translators.html
@@ -913,9 +913,9 @@ msgstr "John"
 msgid "Join"
 msgstr "Unisciti"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Unisciti al mio portafoglio Groestlcoin Mobile Wallet. Ecco il codice di invito: {{secret}} Puoi scaricare Groestlcoin Mobile Wallet dal tuo telefono o computer da https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Unisciti al mio portafoglio Groestlcoin Mobile Wallet. Ecco il codice di invito: {{secret}} Puoi scaricare Groestlcoin Mobile Wallet dal tuo telefono o computer da https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -942,7 +942,7 @@ msgid "Last Wallet Addresses"
 msgstr "Indirizzi dell'ultimo portafoglio"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr "Ulteriori informazioni sui backup Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesFee.html
@@ -973,7 +973,7 @@ msgstr "Corrispondenze:"
 msgid "me"
 msgstr "io"
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Proposta di Pagamento Rifiutata"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr "Proposta di Pagamento Rifiutata dai Groestlcoin Mobile Walleters"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr "Proposta di Pagamento Firmata dai Groestlcoin Mobile Walleters"
 
 #: public/views/walletHome.html
@@ -1261,7 +1261,7 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr "Si prega di toccare le parole al fine di confermare la che vostra frase di backup è scritta correttamente."
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr "Si prega di aggiornare Groestlcoin Mobile Wallet per eseguire questa azione"
 
 #: public/views/uri.html
@@ -1301,7 +1301,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr "La chiave privata è crittografata, non è possibile accedere"
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr "Le notifiche push per Groestlcoin Mobile Wallet sono attualmente disabilitate. Abilitarle nel menu Impostazioni."
 
 #: public/views/export.html
@@ -1467,7 +1467,7 @@ msgid "Send addresses by email"
 msgstr "Invia indirizzi via Email"
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr "Invia Groestlcoin"
 
 #: public/views/export.html
@@ -1531,13 +1531,13 @@ msgstr "Impostazioni"
 msgid "Share address"
 msgstr "Condividi l'indirizzo"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Condividi l'invito"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "Condividi questo invito con i tuoi copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
+msgstr "Condividi questo invito con i tuoi GroestlPayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1596,7 +1596,7 @@ msgstr "Necessaria password di spesa"
 msgid "Spending Passwords do not match"
 msgstr "Le password di spesa non combaciano"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1666,7 +1666,7 @@ msgid "The request could not be understood by the server"
 msgstr "La richiesta potrebbe non essere compresa dal server"
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "Il software non costituisce un account o altre terze parti servono come intermediari finanziari o custodi dei tuoi Groestlcoin."
 
 #: public/views/includes/terms.html
@@ -1677,7 +1677,7 @@ msgstr "Il software che si sta per utilizzare è un portafoglio libero, open sou
 msgid "The spend proposal is not pending"
 msgstr "La proposta di pagamento non è in sospeso"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "Il portafoglio {{walletName}} è stato eliminato"
@@ -1695,7 +1695,7 @@ msgid "There are no wallets to make this payment"
 msgstr "Non ci sono portafogli per effettuare questo pagamento"
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
+msgid "There is a new version of GroestlPay. Please update"
 msgstr "C'è una nuova versione di Groestlcoin Mobile Wallet. Si prega di aggiornare"
 
 #: src/js/controllers/import.js
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "Totale Importo Bloccato"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "Numero totale di copayer"
+msgid "Total number of GroestlPayers"
+msgstr "Numero totale di GroestlPayer"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1819,9 +1819,9 @@ msgstr "Versione"
 msgid "View"
 msgstr "Visualizza"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "In attesa di copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
+msgstr "In attesa di GroestlPayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1831,7 +1831,7 @@ msgstr "In attesa del Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "In attesa del Trezor..."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "In attesa..."
 
@@ -1840,7 +1840,7 @@ msgid "Wallet already exists"
 msgstr "Il portafoglio esiste già"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
+msgid "Wallet already in GroestlPay"
 msgstr "Portafoglio già in Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesInformation.html
@@ -1855,7 +1855,7 @@ msgstr "Esportazione portafoglio"
 msgid "Wallet Id"
 msgstr "Id portafoglio"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Portafoglio incompleto e danneggiato"
 
