--- a/i18n/po/ko.po
+++ b/i18n/po/ko.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,10 +23,10 @@ msgid "(Trusted)"
 msgstr "(Trusted)"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
-msgstr "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
+msgstr "{{fee}} will be deducted for groestlcoin networking fees"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/walletHome.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-of-{{index.n}}"
@@ -40,7 +40,7 @@ msgid "{{len}} wallets imported. Funds scanning in progress. Hold on to see upda
 msgstr "{{len}} 개의 지갑을 가져왔습니다. 잔액을 조회하고 있습니다. 갱신된 잔액을 확인하려면 기다려 주세요"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* 지불제안은 다음 조건이 만족할 때 지울 수 있습니다. 1) 당신이 작성자이고, 다른 지갑 참여자가 사인하지 않았을 때, 또는 2) 제안이 작성된 지 24시간 이상이 지났을 때."
 
 #: public/views/disclaimer.html
@@ -48,28 +48,28 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR EN
 msgstr "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
-msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
+msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
-msgstr "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
-msgstr "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
 
 #: public/views/splash.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "다중서명 비트코인 지갑"
 
 #: public/views/preferences.html
-msgid "About Copay"
-msgstr "Copay에 대하여"
+msgid "About GroestlPay"
+msgstr "GroestlPay에 대하여"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -116,8 +116,8 @@ msgid "Alias for <i>{{index.walletName}}</i>"
 msgstr "<i>{{index.walletName}}</i>의 별명"
 
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
-msgstr "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
+msgstr "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 
 #: public/views/disclaimer.html
 msgid "All transaction requests are irreversible."
@@ -156,7 +156,7 @@ msgstr "변경 사항 적용 중"
 msgid "Are you sure you want to delete the backup words?"
 msgstr "Are you sure you want to delete the backup words?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "정말로 지갑을 삭제하시겠습니까?"
@@ -232,11 +232,11 @@ msgstr "Broadcasting transaction"
 msgid "Browser unsupported"
 msgstr "지원되지 않는 브라우저"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/walletHome.html
 #: public/views/modals/confirmation.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
@@ -268,7 +268,7 @@ msgstr "돈을 보낼 지갑을 선택해주세요"
 
 #: public/views/includes/topbar.html
 #: public/views/modals/advancedSend.html
-#: public/views/modals/copayers.html
+#: public/views/modals/GroestlPayers.html
 #: public/views/modals/customized-amount.html
 #: public/views/modals/paypro.html
 #: public/views/modals/scanner.html
@@ -285,7 +285,7 @@ msgid "Commit hash"
 msgstr "커밋 해시"
 
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -308,22 +308,22 @@ msgid "Connecting to {{join.hwWallet}} Wallet..."
 msgstr "Connecting to {{join.hwWallet}} Wallet..."
 
 #: src/js/services/bwsError.js
-msgid "Copayer already in this wallet"
-msgstr "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
+msgstr "GroestlPayer already in this wallet"
 
 #: src/js/services/bwsError.js
-msgid "Copayer already voted on this spend proposal"
-msgstr "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
+msgstr "GroestlPayer already voted on this spend proposal"
 
 #: src/js/services/bwsError.js
-msgid "Copayer data mismatch"
-msgstr "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
+msgstr "GroestlPayer data mismatch"
 
-#: public/views/modals/copayers.html
-msgid "Copayers"
-msgstr "Copayers"
+#: public/views/modals/GroestlPayers.html
+msgid "GroestlPayers"
+msgstr "GroestlPayers"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/walletHome.js
 msgid "Copied to clipboard"
@@ -422,8 +422,8 @@ msgid "Create"
 msgstr "작성"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "{{requiredCopayers}}-of-{{totalCopayers}} 지갑 만들기"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "{{requiredGroestlPayers}}-of-{{totalGroestlPayers}} 지갑 만들기"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -463,7 +463,7 @@ msgstr "날짜"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "이 지갑을 삭제하고 새로운 지갑 만들기"
 
@@ -679,8 +679,8 @@ msgid "Hardware Wallet"
 msgstr "Hardware Wallet"
 
 #: public/views/import.html
-msgid "Have a Backup from Copay v0.9?"
-msgstr "Copay v0.9용 백업을 가지고 계신가요?"
+msgid "Have a Backup from GroestlPay v0.9?"
+msgstr "GroestlPay v0.9용 백업을 가지고 계신가요?"
 
 #: public/views/create.html
 #: public/views/import.html
@@ -767,9 +767,9 @@ msgstr "Invalid"
 msgid "Invalid address"
 msgstr "Invalid address"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
-msgstr "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
+msgstr "Invitation to share a GroestlPay Wallet"
 
 #: public/views/translators.html
 msgid "Italian"
@@ -788,9 +788,9 @@ msgstr "John"
 msgid "Join"
 msgstr "참가"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -813,8 +813,8 @@ msgid "Last Wallet Addresses"
 msgstr "Last Wallet Addresses"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
-msgstr "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
+msgstr "Learn more about GroestlPay backups"
 
 #: public/views/importLegacy.html
 msgid "Learn more about Wallet Migration"
@@ -844,8 +844,8 @@ msgstr "Make a payment to"
 msgid "me"
 msgstr "me"
 
-#: public/views/includes/copayers.html
-#: public/views/modals/copayers.html
+#: public/views/includes/GroestlPayers.html
+#: public/views/modals/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 msgid "Me"
@@ -1011,12 +1011,12 @@ msgid "Payment Proposal Rejected"
 msgstr "Payment Proposal Rejected"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
-msgstr "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
+msgstr "Payment Proposal Rejected by GroestlPayer"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
-msgstr "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
+msgstr "Payment Proposal Signed by GroestlPayer"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1083,8 +1083,8 @@ msgid "Please enter the wallet seed"
 msgstr "Please enter the wallet seed"
 
 #: src/js/services/bwsError.js
-msgid "Please upgrade Copay to perform this action"
-msgstr "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
+msgstr "Please upgrade GroestlPay to perform this action"
 
 #: src/js/controllers/import.js
 msgid "Please, select your backup file"
@@ -1309,13 +1309,13 @@ msgstr "설정"
 msgid "Share address"
 msgstr "Share address"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Share invitation"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
+msgstr "Share this invitation with your GroestlPayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments. To protect your privacy, new addresses are generated automatically once you use them."
@@ -1369,7 +1369,7 @@ msgstr "Spend proposal not found"
 msgid "Still not done"
 msgstr "Still not done"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1432,7 +1432,7 @@ msgid "The seed could require a passphrase to be imported"
 msgstr "The seed could require a passphrase to be imported"
 
 #: public/views/disclaimer.html
-msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your Groestlcoin."
 
 #: public/views/disclaimer.html
@@ -1443,7 +1443,7 @@ msgstr "The software you are about to use functions as a free, open source, and 
 msgid "The spend proposal is not pending"
 msgstr "The spend proposal is not pending"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "The wallet \"{{walletName}}\" was deleted"
@@ -1497,8 +1497,8 @@ msgid "Total Locked Balance"
 msgstr "Total Locked Balance"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "Total number of copayers"
+msgid "Total number of GroestlPayers"
+msgstr "Total number of GroestlPayers"
 
 #: public/views/modals/tx-details.html
 msgid "Transaction"
@@ -1568,11 +1568,11 @@ msgstr "버전"
 msgid "View"
 msgstr "View"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "Waiting for copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
+msgstr "Waiting for GroestlPayers"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "대기 중..."
 
@@ -1593,8 +1593,8 @@ msgid "Wallet Already Imported:"
 msgstr "이미 가져온 지갑:"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay:"
-msgstr "Wallet already in Copay:"
+msgid "Wallet already in GroestlPay:"
+msgstr "Wallet already in GroestlPay:"
 
 #: public/views/preferencesInformation.html
 msgid "Wallet Configuration (m-n)"
@@ -1608,7 +1608,7 @@ msgstr "Wallet Export"
 msgid "Wallet Id"
 msgstr "Wallet Id"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Wallet incomplete and broken"
 
