--- a/i18n/po/pl.po
+++ b/i18n/po/pl.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: pl\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,14 +28,14 @@ msgid "[Balance Hidden]"
 msgstr "[Balans Ukryty]"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} zostanie potrącone jako prowizja sieci Groestlcoin"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr "{{feeRateStr}} transakcji"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-z-{{index.n}}"
@@ -53,7 +53,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-z-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* Wniosek wypłaty może być usunięty jeśli: 1) Po utworzeniu nie zatwierdził go żaden inny współwłaściciel portfela lub 2) minęły 24 godziny od kiedy wniosek został utworzony."
 
 #: public/views/includes/terms.html
@@ -61,28 +61,28 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR EN
 msgstr "<b>JEŚLI UŻYTKOWNIK STRACI DOSTĘP DO PORTFELA Groestlcoin Mobile Wallet LUB ZASZYFROWANYCH KLUCZY PRYWATNYCH, A NIE MA ZAPISANEJ KOPII ZAPASOWEJ PORTFELA I HASŁA, PRZYJMUJE DO WIADOMOŚCI, ŻE JAKIEKOLWIEK POSIADANE CAPRICOINY ZWIĄZANE Z TYM PORTFELEM Groestlcoin Mobile Wallet BĘDĄ NIEDOSTĘPNE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
 msgstr "<b>LUB</b> 1 plik eksportu portfela i reszta wymaganych fraz odzyskiwania portfela (np. w portfelu 3-5: 1 plik eksportu portfela + 2 frazy odzyskiwania któregokolwiek z pozostałych współwłaścicieli portfela)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
 msgstr "<b>LUB</b> frazy odzyskiwania <b>wszystkich</b> współwłaścicieli portfela"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
 msgstr "<b>LUB</b> fraz odzyskiwania <b>wszystkich</b> współwłaścicieli portfela"
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "Portfel Groestlcoin z multipodpisami"
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr "Informacje o Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -151,7 +151,7 @@ msgstr "Nazwa dla <i>{{index.walletName}}</i>"
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr "Wkład do tłumaczenia Groestlcoin Mobile Wallet mile widziany. Zapisz się na crowdin.com i dołącz do projektu Groestlcoin Mobile Wallet na"
 
 #: public/views/includes/terms.html
@@ -182,7 +182,7 @@ msgstr "Kwota w"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "Czy na pewno chcesz usunąć frazę?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Czy na pewno chcesz usunąć ten portfel?"
@@ -286,13 +286,13 @@ msgstr "Obliczanie prowizji"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "Anuluj"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr "Anuluj i usuń portfel"
 
@@ -353,7 +353,7 @@ msgstr "Zatwierdzony hash"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "Dalej"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr "Użytkownik jest już w tym portfelu"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr "Użytkownik głosował już za tym wnioskiem wypłaty"
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
 msgstr "Niezgodność danych współwłaściciela portfela"
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
+msgid "GroestlPayers"
 msgstr "Współwłaściciele portfela"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "Utwórz"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "Utwórz portfel {{requiredCopayers}} z {{totalCopayers}}"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "Utwórz portfel {{requiredGroestlPayers}} z {{totalGroestlPayers}}"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "Data"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Odszyfrowywanie papierowego portfela zajmie na tym urządzeniu około 5 minut. Prosimy o niezamykanie aplikacji."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "Usuń i utwórz nowy portfel"
 
@@ -892,8 +892,8 @@ msgstr "Nieprawidłowy adres"
 msgid "Invalid derivation path"
 msgstr "Nieprawidłowa ścieżka derywacji"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Zaproszenie do współdzielenia portfela Groestlcoin Mobile Wallet"
 
 #: public/views/translators.html
@@ -913,9 +913,9 @@ msgstr "Jan"
 msgid "Join"
 msgstr "Dołącz"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "Dołącz do mojego portfela Groestlcoin Mobile Wallet. Kod zaproszenia: {{secret}} Wersję desktopową lub aplikację na telefon można pobrać z https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "Dołącz do mojego portfela Groestlcoin Mobile Wallet. Kod zaproszenia: {{secret}} Wersję desktopową lub aplikację na telefon można pobrać z https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -942,7 +942,7 @@ msgid "Last Wallet Addresses"
 msgstr "Ostatnie adresy portfela"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr "Dowiedz się więcej o kopiach zapasowych Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesFee.html
@@ -973,7 +973,7 @@ msgstr "Dopasowania:"
 msgid "me"
 msgstr "ja"
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Wniosek wypłaty odrzucony"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr "Wniosek wypłaty odrzucony przez współwłaściciela portfela"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr "Wniosek wypłaty zatwierdzony przez współwłaściciela portfela"
 
 #: public/views/walletHome.html
@@ -1261,7 +1261,7 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr "Proszę wybrać słowa w celu potwierdzenia poprawności frazy odzyskiwania."
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr "Proszę uaktualnić Groestlcoin Mobile Wallet, by móc wykonać tę operację"
 
 #: public/views/uri.html
@@ -1301,7 +1301,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr "Klucz prywatny jest zaszyfrowany, nie można podpisać"
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr "Powiadomienia Groestlcoin Mobile Wallet są obecnie wyłączone. Włącz je w ustawieniach aplikacji."
 
 #: public/views/export.html
@@ -1467,7 +1467,7 @@ msgid "Send addresses by email"
 msgstr "Wyślij adresy przez e-mail"
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr "Wyślij Groestlcoiny"
 
 #: public/views/export.html
@@ -1531,12 +1531,12 @@ msgstr "Ustawienia"
 msgid "Share address"
 msgstr "Udostępnij adres"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "Wyślij zaproszenie"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
 msgstr "Wyślij zaproszenie współwłaścicielom portfela"
 
 #: public/views/walletHome.html
@@ -1596,7 +1596,7 @@ msgstr "Wymagane Hasło Wypłat"
 msgid "Spending Passwords do not match"
 msgstr "Podane hasła różnią się"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1666,7 +1666,7 @@ msgid "The request could not be understood by the server"
 msgstr "Wniosek nie został zrozumiany przez serwer"
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "Oprogramowanie nie jest kontem, gdzie inne osoby trzecie mogą służyć jako pośrednicy finansowi lub opiekunowie twoich Groestlcoinów."
 
 #: public/views/includes/terms.html
@@ -1677,7 +1677,7 @@ msgstr "Oprogramowanie to jest darmowym, open source, obsługującym multipodpis
 msgid "The spend proposal is not pending"
 msgstr "Wniosek płatności nie jest oczekujący"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "Portfel \"{{walletName}}\" został usunięty"
@@ -1695,7 +1695,7 @@ msgid "There are no wallets to make this payment"
 msgstr "Brak portfela, aby dokonać tej wypłaty"
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
+msgid "There is a new version of GroestlPay. Please update"
 msgstr "Jest dostępna nowa wersja Groestlcoin Mobile Wallet. Proszę zaktualizować"
 
 #: src/js/controllers/import.js
@@ -1742,7 +1742,7 @@ msgid "Total Locked Balance"
 msgstr "Łącznie zablokowane środki"
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of GroestlPayers"
 msgstr "Liczba współwłaścicieli portfela"
 
 #: src/js/services/fingerprintService.js
@@ -1819,8 +1819,8 @@ msgstr "Wersja"
 msgid "View"
 msgstr "Widok"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
 msgstr "Oczekiwanie na współwłaścicieli portfela"
 
 #: src/js/services/onGoingProcess.js
@@ -1831,7 +1831,7 @@ msgstr "Oczekiwanie na Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "Oczekiwanie na Trezor..."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "Oczekiwanie..."
 
@@ -1840,7 +1840,7 @@ msgid "Wallet already exists"
 msgstr "Portfel już istnieje"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
+msgid "Wallet already in GroestlPay"
 msgstr "Portfel jest już w Groestlcoin Mobile Wallet"
 
 #: public/views/preferencesInformation.html
@@ -1855,7 +1855,7 @@ msgstr "Eksport portfela"
 msgid "Wallet Id"
 msgstr "Id Portfela"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Awaria: Portfel nie działa"
 
