--- a/i18n/po/template.pot
+++ b/i18n/po/template.pot
@@ -18,14 +18,14 @@ msgid "[Balance Hidden]"
 msgstr ""
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr ""
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr ""
@@ -43,7 +43,7 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr ""
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr ""
 
 #: public/views/includes/terms.html
@@ -51,28 +51,28 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR COPAY WALLET OR YOUR ENCRYPTED PRIVATE KEYS
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
 msgstr ""
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
 msgstr ""
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr ""
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
+msgid "About GroestlPay"
 msgstr ""
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -141,7 +141,7 @@ msgstr ""
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 msgstr ""
 
 #: public/views/includes/terms.html
@@ -172,7 +172,7 @@ msgstr ""
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr ""
@@ -276,13 +276,13 @@ msgstr ""
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr ""
 
@@ -343,7 +343,7 @@ msgstr ""
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -378,22 +378,22 @@ msgid "Continue"
 msgstr ""
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
+msgid "GroestlPayer already in this wallet"
 msgstr ""
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
+msgid "GroestlPayer already voted on this spend proposal"
 msgstr ""
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
+msgid "GroestlPayer data mismatch"
 msgstr ""
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
+msgid "GroestlPayers"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -497,7 +497,7 @@ msgid "Create"
 msgstr ""
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
 msgstr ""
 
 #: public/views/add.html
@@ -537,7 +537,7 @@ msgstr ""
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr ""
 
@@ -882,8 +882,8 @@ msgstr ""
 msgid "Invalid derivation path"
 msgstr ""
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
 msgstr ""
 
 #: public/views/translators.html
@@ -903,8 +903,8 @@ msgstr ""
 msgid "Join"
 msgstr ""
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 msgstr ""
 
 #: public/views/add.html
@@ -932,7 +932,7 @@ msgid "Last Wallet Addresses"
 msgstr ""
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
+msgid "Learn more about GroestlPay backups"
 msgstr ""
 
 #: public/views/preferencesFee.html
@@ -963,7 +963,7 @@ msgstr ""
 msgid "me"
 msgstr ""
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1182,11 +1182,11 @@ msgid "Payment Proposal Rejected"
 msgstr ""
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
+msgid "Payment Proposal Rejected by GroestlPayer"
 msgstr ""
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
+msgid "Payment Proposal Signed by GroestlPayer"
 msgstr ""
 
 #: public/views/walletHome.html
@@ -1251,7 +1251,7 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr ""
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
+msgid "Please upgrade GroestlPay to perform this action"
 msgstr ""
 
 #: public/views/uri.html
@@ -1291,7 +1291,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr ""
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr ""
 
 #: public/views/export.html
@@ -1457,7 +1457,7 @@ msgid "Send addresses by email"
 msgstr ""
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr ""
 
 #: public/views/export.html
@@ -1521,12 +1521,12 @@ msgstr ""
 msgid "Share address"
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr ""
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
 msgstr ""
 
 #: public/views/walletHome.html
@@ -1586,7 +1586,7 @@ msgstr ""
 msgid "Spending Passwords do not match"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1656,7 +1656,7 @@ msgid "The request could not be understood by the server"
 msgstr ""
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account where BitPay or other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where BitPay or other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr ""
 
 #: public/views/includes/terms.html
@@ -1667,7 +1667,7 @@ msgstr ""
 msgid "The spend proposal is not pending"
 msgstr ""
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr ""
@@ -1685,7 +1685,7 @@ msgid "There are no wallets to make this payment"
 msgstr ""
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
+msgid "There is a new version of GroestlPay. Please update"
 msgstr ""
 
 #: src/js/controllers/import.js
@@ -1732,7 +1732,7 @@ msgid "Total Locked Balance"
 msgstr ""
 
 #: public/views/create.html
-msgid "Total number of copayers"
+msgid "Total number of GroestlPayers"
 msgstr ""
 
 #: src/js/services/fingerprintService.js
@@ -1809,8 +1809,8 @@ msgstr ""
 msgid "View"
 msgstr ""
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
 msgstr ""
 
 #: src/js/services/onGoingProcess.js
@@ -1821,7 +1821,7 @@ msgstr ""
 msgid "Waiting for Trezor..."
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr ""
 
@@ -1830,7 +1830,7 @@ msgid "Wallet already exists"
 msgstr ""
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
+msgid "Wallet already in GroestlPay"
 msgstr ""
 
 #: public/views/preferencesInformation.html
@@ -1845,7 +1845,7 @@ msgstr ""
 msgid "Wallet Id"
 msgstr ""
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr ""
 
