--- a/i18n/po/zh.po
+++ b/i18n/po/zh.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Project-Id-Version: copay\n"
+"Project-Id-Version: GroestlPay\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: crowdin.com\n"
-"X-Crowdin-Project: copay\n"
+"X-Crowdin-Project: GroestlPay\n"
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: template.pot\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,14 +28,14 @@ msgid "[Balance Hidden]"
 msgstr "[隐藏余额]"
 
 #: src/js/controllers/walletHome.js
-msgid "{{fee}} will be deducted for bitcoin networking fees"
+msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "扣除黑币网络费用 {{fee}}"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
 msgstr "交易的{{feeRateStr}}"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.n}} 分之 {{index.m}}"
@@ -53,36 +53,36 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.n}} 分之 {{item.m}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* 如果 1) 你是创造者，及没有其他 copayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* 如果 1) 你是创造者，及没有其他 GroestlPayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>如果你无法访问你的 Groestlcoin Mobile Wallet 钱包或加密私钥，及你没有分开储存钱包备份和相应密码，你承认并同意有关 Groestlcoin Mobile Wallet 钱包里的任何黑币将不可被存取。</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
-msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 copayers 的 2 钱包恢复短语)。"
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
+msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 GroestlPayers 的 2 钱包恢复短语)。"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> GroestlPayers 的钱包恢复短语"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> GroestlPayers 的钱包恢复短语"
 
 #: public/views/disclaimer.html
-msgid "A multisignature bitcoin wallet"
+msgid "A multisignature groestlcoin wallet"
 msgstr "多重签名黑币钱包"
 
 #: public/views/preferencesGlobal.html
-msgid "About Copay"
-msgstr "Copay 简介"
+msgid "About GroestlPay"
+msgstr "GroestlPay 简介"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -151,8 +151,8 @@ msgstr "<i>{{index.walletName}}</i>别名"
 
 #: public/views/preferencesLanguage.html
 #: public/views/translators.html
-msgid "All contributions to Copay's translation are welcome. Sign up at crowdin.com and join the Copay project at"
-msgstr "欢迎大家为 Copay 提供翻译，注册 crowdin.com 并加入 Copay 项目"
+msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
+msgstr "欢迎大家为 GroestlPay 提供翻译，注册 crowdin.com 并加入 GroestlPay 项目"
 
 #: public/views/includes/terms.html
 msgid "All transaction requests are irreversible."
@@ -182,7 +182,7 @@ msgstr "已转换的数额"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "你确定要删除恢复短语吗?"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "确定要删除这个钱包吗？"
@@ -286,13 +286,13 @@ msgstr "正在计算费用"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "取消"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Cancel and delete the wallet"
 msgstr "取消并删除钱包"
 
@@ -353,7 +353,7 @@ msgstr "提交哈希"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "继续"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already in this wallet"
-msgstr "Copayer 已经在这个钱包里"
+msgid "GroestlPayer already in this wallet"
+msgstr "GroestlPayer 已经在这个钱包里"
 
 #: src/js/services/bwcError.js
-msgid "Copayer already voted on this spend proposal"
-msgstr "Copayer 已经表决此花费提议"
+msgid "GroestlPayer already voted on this spend proposal"
+msgstr "GroestlPayer 已经表决此花费提议"
 
 #: src/js/services/bwcError.js
-msgid "Copayer data mismatch"
-msgstr "Copayer 的数据不匹配"
+msgid "GroestlPayer data mismatch"
+msgstr "GroestlPayer 的数据不匹配"
 
 #: public/views/preferencesInformation.html
-msgid "Copayers"
-msgstr "Copayers"
+msgid "GroestlPayers"
+msgstr "GroestlPayers"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "创建"
 
 #: public/views/create.html
-msgid "Create {{requiredCopayers}}-of-{{totalCopayers}} wallet"
-msgstr "创建{{totalCopayers}}-的-{{requiredCopayers}} 的钱包"
+msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgstr "创建{{totalGroestlPayers}}-的-{{requiredGroestlPayers}} 的钱包"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "日期"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "在此设备上解密纸钱包可能需要大约 5 分钟。请耐心等候并保持程序开着。"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Delete it and create a new one"
 msgstr "删除并创建新的"
 
@@ -892,9 +892,9 @@ msgstr "地址无效"
 msgid "Invalid derivation path"
 msgstr "衍生路径无效"
 
-#: src/js/controllers/copayers.js
-msgid "Invitation to share a Copay Wallet"
-msgstr "邀请分享 Copay 钱包"
+#: src/js/controllers/GroestlPayers.js
+msgid "Invitation to share a GroestlPay Wallet"
+msgstr "邀请分享 GroestlPay 钱包"
 
 #: public/views/translators.html
 msgid "Italian"
@@ -913,9 +913,9 @@ msgstr "John"
 msgid "Join"
 msgstr "加入"
 
-#: src/js/controllers/copayers.js
-msgid "Join my Copay wallet. Here is the invitation code: {{secret}} You can download Copay for your phone or desktop at https://copay.io"
-msgstr "加入我的 Copay 钱包。这是邀请码 ︰ {{secret}} 你可以在 https://copay.io 下载 Copay 到你的手机或桌式电脑"
+#: src/js/controllers/GroestlPayers.js
+msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
+msgstr "加入我的 GroestlPay 钱包。这是邀请码 ︰ {{secret}} 你可以在 https://GroestlPay.io 下载 GroestlPay 到你的手机或桌式电脑"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -942,8 +942,8 @@ msgid "Last Wallet Addresses"
 msgstr "最后的钱包地址"
 
 #: public/views/backup.html
-msgid "Learn more about Copay backups"
-msgstr "了解更多关于 Copay 备份"
+msgid "Learn more about GroestlPay backups"
+msgstr "了解更多关于 GroestlPay 备份"
 
 #: public/views/preferencesFee.html
 msgid "Loading..."
@@ -973,7 +973,7 @@ msgstr "匹配："
 msgid "me"
 msgstr "我"
 
-#: public/views/includes/copayers.html
+#: public/views/includes/GroestlPayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,12 +1192,12 @@ msgid "Payment Proposal Rejected"
 msgstr "支付提议已被拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by Copayer"
-msgstr "支付提议已被 Copayer 拒绝"
+msgid "Payment Proposal Rejected by GroestlPayer"
+msgstr "支付提议已被 GroestlPayer 拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by Copayer"
-msgstr "支付提议已获 Copayer 签名"
+msgid "Payment Proposal Signed by GroestlPayer"
+msgstr "支付提议已获 GroestlPayer 签名"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1261,8 +1261,8 @@ msgid "Please tap the words in order to confirm your backup phrase is correctly 
 msgstr "请按顺序点击词句，以确认你的备份短语填写正确。"
 
 #: src/js/services/bwcError.js
-msgid "Please upgrade Copay to perform this action"
-msgstr "请升级 Copay 以执行此操作"
+msgid "Please upgrade GroestlPay to perform this action"
+msgstr "请升级 GroestlPay 以执行此操作"
 
 #: public/views/uri.html
 msgid "Please wait to be redirected..."
@@ -1301,7 +1301,7 @@ msgid "Private key is encrypted, cannot sign"
 msgstr "私钥已加密，无法签名"
 
 #: public/views/preferencesGlobal.html
-msgid "Push notifications for Copay are currently disabled. Enable them in the Settings app."
+msgid "Push notifications for GroestlPay are currently disabled. Enable them in the Settings app."
 msgstr "Groestlcoin Mobile Wallet 的推送通知目前未启用，请在设置应用里启用它。"
 
 #: public/views/export.html
@@ -1467,7 +1467,7 @@ msgid "Send addresses by email"
 msgstr "通过电邮发送地址"
 
 #: public/views/includes/confirm-tx.html
-msgid "Send bitcoin"
+msgid "Send groestlcoin"
 msgstr "发送黑币"
 
 #: public/views/export.html
@@ -1531,13 +1531,13 @@ msgstr "设置"
 msgid "Share address"
 msgstr "共享地址"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Share invitation"
 msgstr "共享邀请"
 
-#: public/views/copayers.html
-msgid "Share this invitation with your copayers"
-msgstr "将此邀请与你的 copayers 共享"
+#: public/views/GroestlPayers.html
+msgid "Share this invitation with your GroestlPayers"
+msgstr "将此邀请与你的 GroestlPayers 共享"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1596,7 +1596,7 @@ msgstr "需要支付密码"
 msgid "Spending Passwords do not match"
 msgstr "支付密码不匹配"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1666,7 +1666,7 @@ msgid "The request could not be understood by the server"
 msgstr "服务器不理解此请求"
 
 #: public/views/includes/terms.html
-msgid "The software does not constitute an account where  other third parties serve as financial intermediaries or custodians of your bitcoin."
+msgid "The software does not constitute an account where  other third parties serve as financial intermediaries or custodians of your groestlcoin."
 msgstr "此软件并不构成一个账户，其他第三方作为金融中介机构或保管人以保管你的黑币。"
 
 #: public/views/includes/terms.html
@@ -1677,7 +1677,7 @@ msgstr "你将使用的软件是一个免费、开放源代码和多重签名的
 msgid "The spend proposal is not pending"
 msgstr "花费提议不是未决"
 
-#: src/js/controllers/copayers.js
+#: src/js/controllers/GroestlPayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "\"{{walletName}}\"钱包已删除"
@@ -1695,8 +1695,8 @@ msgid "There are no wallets to make this payment"
 msgstr "没有钱包以进行此支付"
 
 #: src/js/controllers/index.js
-msgid "There is a new version of Copay. Please update"
-msgstr "Copay 有新版本。请更新"
+msgid "There is a new version of GroestlPay. Please update"
+msgstr "GroestlPay 有新版本。请更新"
 
 #: src/js/controllers/import.js
 msgid "There is an error in the form"
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "锁定结余的总额"
 
 #: public/views/create.html
-msgid "Total number of copayers"
-msgstr "Copayers 的总数"
+msgid "Total number of GroestlPayers"
+msgstr "GroestlPayers 的总数"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1819,9 +1819,9 @@ msgstr "版本"
 msgid "View"
 msgstr "查看"
 
-#: public/views/copayers.html
-msgid "Waiting for copayers"
-msgstr "正在等待 copayers"
+#: public/views/GroestlPayers.html
+msgid "Waiting for GroestlPayers"
+msgstr "正在等待 GroestlPayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1831,7 +1831,7 @@ msgstr "正在等待 Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "正在等待 Trezor..."
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Waiting..."
 msgstr "等待中..."
 
@@ -1840,8 +1840,8 @@ msgid "Wallet already exists"
 msgstr "钱包已存在"
 
 #: src/js/services/profileService.js
-msgid "Wallet already in Copay"
-msgstr "钱包已经在 Copay"
+msgid "Wallet already in GroestlPay"
+msgstr "钱包已经在 GroestlPay"
 
 #: public/views/preferencesInformation.html
 msgid "Wallet Configuration (m-n)"
@@ -1855,7 +1855,7 @@ msgstr "钱包导出"
 msgid "Wallet Id"
 msgstr "钱包 Id"
 
-#: public/views/copayers.html
+#: public/views/GroestlPayers.html
 msgid "Wallet incomplete and broken"
 msgstr "钱包不完整和损坏"
 
