--- a/i18n/po/es.po
+++ b/i18n/po/es.po
@@ -35,7 +35,7 @@ msgstr "{{fee}} se descontará por comisión de la red Groestlcoin"
 msgid "{{feeRateStr}} of the transaction"
 msgstr "{{feeRateStr}} de la transacción"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-de-{{index.n}}"
@@ -53,24 +53,24 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.m}}-de-{{item.n}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* Una propuesta de pago puede ser eliminada si 1) Ud. es el creador, y ningún otro GroestlPayer la haya firmado, o 2) hayan transcurrido 24 horas desde la creación de la propuesta."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* Una propuesta de pago puede ser eliminada si 1) Ud. es el creador, y ningún otro copayer la haya firmado, o 2) hayan transcurrido 24 horas desde la creación de la propuesta."
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>SI UD. PIERDE ACCESO A SU MONEDERO Groestlcoin Mobile Wallet O A SUS CLAVES PRIVADAS ENCRIPTADAS Y NO HA GUARDADO POR SEPARADO UNA COPIA DE SEGURIDAD DE SU MONEDERO Y CONTRASEÑA CORRESPONDIENTES, USTED RECONOCE Y ACEPTA QUE CUALQUIER CAPRICOIN QUE HA ASOCIADO CON ESE MONEDERO Groestlcoin Mobile Wallet SERÁ INACCESIBLE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
-msgstr "<b>O</b> 1 archivo exportado del monedero y el quórum restante de la frase de recuperación (por ejemplo en un monedero 3-5: 1 archivo exportado + 2 frases de recuperación del monedero de cualquiera de los otros GroestlPayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgstr "<b>O</b> 1 archivo exportado del monedero y el quórum restante de la frase de recuperación (por ejemplo en un monedero 3-5: 1 archivo exportado + 2 frases de recuperación del monedero de cualquiera de los otros copayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>O</b> la frase de recuperación de <b>todos</b> los GroestlPayers del monedero"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgstr "<b>O</b> la frase de recuperación de <b>todos</b> los copayers del monedero"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>O</b> las frases de recuperación de <b>todos</b> los GroestlPayers del monedero"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgstr "<b>O</b> las frases de recuperación de <b>todos</b> los copayers del monedero"
 
 #: public/views/disclaimer.html
 msgid "A multisignature groestlcoin wallet"
@@ -82,7 +82,7 @@ msgstr "Acerca de Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -182,7 +182,7 @@ msgstr "Importe en"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "¿Está seguro que quiere eliminar la frase de recuperación?"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "¿Estas seguro de borrar este monedero?"
@@ -286,13 +286,13 @@ msgstr "Calculando comisión"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "Cancelar"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Cancel and delete the wallet"
 msgstr "Cancelar y borrar el monedero"
 
@@ -353,7 +353,7 @@ msgstr "Commit hash"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "Continuar"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer already in this wallet"
+msgid "copayer already in this wallet"
 msgstr "Ya se encuentra en este monedero"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer already voted on this spend proposal"
+msgid "copayer already voted on this spend proposal"
 msgstr "Ya ha votado en esta propuesta de gasto"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer data mismatch"
+msgid "copayer data mismatch"
 msgstr "Discrepancia en los datos del Groestlcoin Mobile Walleter"
 
 #: public/views/preferencesInformation.html
-msgid "GroestlPayers"
+msgid "copayers"
 msgstr "Groestlcoin Mobile Walleters"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "Crear"
 
 #: public/views/create.html
-msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
-msgstr "Crea monedero {{requiredGroestlPayers}}-de-{{totalGroestlPayers}}"
+msgid "Create {{requiredcopayers}}-of-{{totalcopayers}} wallet"
+msgstr "Crea monedero {{requiredcopayers}}-de-{{totalcopayers}}"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "Fecha"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Descifrar un monedero de papel podría tomar alrededor de 5 minutos en este dispositivo. Por favor, sea paciente y mantenga la aplicación abierta."
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Delete it and create a new one"
 msgstr "Borrar y crear uno nuevo"
 
@@ -892,7 +892,7 @@ msgstr "Dirección inválida"
 msgid "Invalid derivation path"
 msgstr "Camino de derivación no válido"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Invitación para compartir un monedero de Groestlcoin Mobile Wallet"
 
@@ -913,7 +913,7 @@ msgstr "Juan"
 msgid "Join"
 msgstr "Unirse"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 msgstr "Únase a mi monedero Groestlcoin Mobile Wallet. Aquí esta el código de invitación: {{secret}}. Puedes descargar Groestlcoin Mobile Wallet a su teléfono o computadora desde https://GroestlPay.io"
 
@@ -973,7 +973,7 @@ msgstr "Coincidencias:"
 msgid "me"
 msgstr "yo"
 
-#: public/views/includes/GroestlPayers.html
+#: public/views/includes/copayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,11 +1192,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Propuesta de Pago Rechazada"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by GroestlPayer"
+msgid "Payment Proposal Rejected by copayer"
 msgstr "Propuesta de Pago Rechazada por Groestlcoin Mobile Walleter"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by GroestlPayer"
+msgid "Payment Proposal Signed by copayer"
 msgstr "Propuesta de Pago Firmada por Groestlcoin Mobile Walleter"
 
 #: public/views/walletHome.html
@@ -1531,13 +1531,13 @@ msgstr "Configuración"
 msgid "Share address"
 msgstr "Compartir dirección"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Share invitation"
 msgstr "Compartir invitación"
 
-#: public/views/GroestlPayers.html
-msgid "Share this invitation with your GroestlPayers"
-msgstr "Compartir esta invitación con sus GroestlPayers"
+#: public/views/copayers.html
+msgid "Share this invitation with your copayers"
+msgstr "Compartir esta invitación con sus copayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1596,7 +1596,7 @@ msgstr "Se necesita la contraseña para enviar"
 msgid "Spending Passwords do not match"
 msgstr "Las contraseña para enviar no coinciden"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1677,7 +1677,7 @@ msgstr "El software que va a utilizar es un monedero digital de código abierto 
 msgid "The spend proposal is not pending"
 msgstr "La propuesta de gasto no esta pendiente"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "El monedero \"{{walletName}}\" fue eliminado"
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "Balance Total Bloqueado"
 
 #: public/views/create.html
-msgid "Total number of GroestlPayers"
-msgstr "Número total de GroestlPayers"
+msgid "Total number of copayers"
+msgstr "Número total de copayers"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1819,9 +1819,9 @@ msgstr "Versión"
 msgid "View"
 msgstr "Ver"
 
-#: public/views/GroestlPayers.html
-msgid "Waiting for GroestlPayers"
-msgstr "Esperando a los demás GroestlPayers"
+#: public/views/copayers.html
+msgid "Waiting for copayers"
+msgstr "Esperando a los demás copayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1831,7 +1831,7 @@ msgstr "Esperando a Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "Esperando a Trezor..."
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Waiting..."
 msgstr "Esperando..."
 
@@ -1855,7 +1855,7 @@ msgstr "Exportar Monedero"
 msgid "Wallet Id"
 msgstr "Id del Monedero"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Monedero incompleto y roto"
 
