--- a/i18n/po/ko.po
+++ b/i18n/po/ko.po
@@ -26,7 +26,7 @@ msgstr "(Trusted)"
 msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} will be deducted for groestlcoin networking fees"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/walletHome.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-of-{{index.n}}"
@@ -40,7 +40,7 @@ msgid "{{len}} wallets imported. Funds scanning in progress. Hold on to see upda
 msgstr "{{len}} 개의 지갑을 가져왔습니다. 잔액을 조회하고 있습니다. 갱신된 잔액을 확인하려면 기다려 주세요"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
 msgstr "* 지불제안은 다음 조건이 만족할 때 지울 수 있습니다. 1) 당신이 작성자이고, 다른 지갑 참여자가 사인하지 않았을 때, 또는 2) 제안이 작성된 지 24시간 이상이 지났을 때."
 
 #: public/views/disclaimer.html
@@ -48,16 +48,16 @@ msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR EN
 msgstr "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
-msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
+msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
+msgid "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
+msgstr "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
+msgid "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
+msgstr "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
 
 #: public/views/splash.html
 msgid "A multisignature groestlcoin wallet"
@@ -69,7 +69,7 @@ msgstr "GroestlPay에 대하여"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -156,7 +156,7 @@ msgstr "변경 사항 적용 중"
 msgid "Are you sure you want to delete the backup words?"
 msgstr "Are you sure you want to delete the backup words?"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "정말로 지갑을 삭제하시겠습니까?"
@@ -232,11 +232,11 @@ msgstr "Broadcasting transaction"
 msgid "Browser unsupported"
 msgstr "지원되지 않는 브라우저"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/walletHome.html
 #: public/views/modals/confirmation.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
@@ -268,7 +268,7 @@ msgstr "돈을 보낼 지갑을 선택해주세요"
 
 #: public/views/includes/topbar.html
 #: public/views/modals/advancedSend.html
-#: public/views/modals/GroestlPayers.html
+#: public/views/modals/copayers.html
 #: public/views/modals/customized-amount.html
 #: public/views/modals/paypro.html
 #: public/views/modals/scanner.html
@@ -285,7 +285,7 @@ msgid "Commit hash"
 msgstr "커밋 해시"
 
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -308,22 +308,22 @@ msgid "Connecting to {{join.hwWallet}} Wallet..."
 msgstr "Connecting to {{join.hwWallet}} Wallet..."
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer already in this wallet"
-msgstr "GroestlPayer already in this wallet"
+msgid "copayer already in this wallet"
+msgstr "copayer already in this wallet"
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer already voted on this spend proposal"
-msgstr "GroestlPayer already voted on this spend proposal"
+msgid "copayer already voted on this spend proposal"
+msgstr "copayer already voted on this spend proposal"
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer data mismatch"
-msgstr "GroestlPayer data mismatch"
+msgid "copayer data mismatch"
+msgstr "copayer data mismatch"
 
-#: public/views/modals/GroestlPayers.html
-msgid "GroestlPayers"
-msgstr "GroestlPayers"
+#: public/views/modals/copayers.html
+msgid "copayers"
+msgstr "copayers"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/walletHome.js
 msgid "Copied to clipboard"
@@ -422,8 +422,8 @@ msgid "Create"
 msgstr "작성"
 
 #: public/views/create.html
-msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
-msgstr "{{requiredGroestlPayers}}-of-{{totalGroestlPayers}} 지갑 만들기"
+msgid "Create {{requiredcopayers}}-of-{{totalcopayers}} wallet"
+msgstr "{{requiredcopayers}}-of-{{totalcopayers}} 지갑 만들기"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -463,7 +463,7 @@ msgstr "날짜"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Delete it and create a new one"
 msgstr "이 지갑을 삭제하고 새로운 지갑 만들기"
 
@@ -767,7 +767,7 @@ msgstr "Invalid"
 msgid "Invalid address"
 msgstr "Invalid address"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Invitation to share a GroestlPay Wallet"
 
@@ -788,7 +788,7 @@ msgstr "John"
 msgid "Join"
 msgstr "참가"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 msgstr "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 
@@ -844,8 +844,8 @@ msgstr "Make a payment to"
 msgid "me"
 msgstr "me"
 
-#: public/views/includes/GroestlPayers.html
-#: public/views/modals/GroestlPayers.html
+#: public/views/includes/copayers.html
+#: public/views/modals/copayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 msgid "Me"
@@ -1011,12 +1011,12 @@ msgid "Payment Proposal Rejected"
 msgstr "Payment Proposal Rejected"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by GroestlPayer"
-msgstr "Payment Proposal Rejected by GroestlPayer"
+msgid "Payment Proposal Rejected by copayer"
+msgstr "Payment Proposal Rejected by copayer"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by GroestlPayer"
-msgstr "Payment Proposal Signed by GroestlPayer"
+msgid "Payment Proposal Signed by copayer"
+msgstr "Payment Proposal Signed by copayer"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1309,13 +1309,13 @@ msgstr "설정"
 msgid "Share address"
 msgstr "Share address"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Share invitation"
 msgstr "Share invitation"
 
-#: public/views/GroestlPayers.html
-msgid "Share this invitation with your GroestlPayers"
-msgstr "Share this invitation with your GroestlPayers"
+#: public/views/copayers.html
+msgid "Share this invitation with your copayers"
+msgstr "Share this invitation with your copayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments. To protect your privacy, new addresses are generated automatically once you use them."
@@ -1369,7 +1369,7 @@ msgstr "Spend proposal not found"
 msgid "Still not done"
 msgstr "Still not done"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1443,7 +1443,7 @@ msgstr "The software you are about to use functions as a free, open source, and 
 msgid "The spend proposal is not pending"
 msgstr "The spend proposal is not pending"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "The wallet \"{{walletName}}\" was deleted"
@@ -1497,8 +1497,8 @@ msgid "Total Locked Balance"
 msgstr "Total Locked Balance"
 
 #: public/views/create.html
-msgid "Total number of GroestlPayers"
-msgstr "Total number of GroestlPayers"
+msgid "Total number of copayers"
+msgstr "Total number of copayers"
 
 #: public/views/modals/tx-details.html
 msgid "Transaction"
@@ -1568,11 +1568,11 @@ msgstr "버전"
 msgid "View"
 msgstr "View"
 
-#: public/views/GroestlPayers.html
-msgid "Waiting for GroestlPayers"
-msgstr "Waiting for GroestlPayers"
+#: public/views/copayers.html
+msgid "Waiting for copayers"
+msgstr "Waiting for copayers"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Waiting..."
 msgstr "대기 중..."
 
@@ -1608,7 +1608,7 @@ msgstr "Wallet Export"
 msgid "Wallet Id"
 msgstr "Wallet Id"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Wallet incomplete and broken"
 
