--- a/i18n/po/pt.po
+++ b/i18n/po/pt.po
@@ -26,7 +26,7 @@ msgstr "(Trusted)"
 msgid "{{fee}} will be deducted for groestlcoin networking fees"
 msgstr "{{fee}} will be deducted for Groestlcoin networking fees"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/walletHome.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.m}}-of-{{index.n}}"
@@ -40,24 +40,24 @@ msgid "{{len}} wallets imported. Funds scanning in progress. Hold on to see upda
 msgstr "{{len}} carteiras importadas. Recursos de digitalização em andamento. Espere para ver o saldo atualizado"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
 
 #: public/views/disclaimer.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
-msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other GroestlPayers)."
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
+msgstr "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>OR</b> the wallet seed of <b>all</b> GroestlPayers in the wallet"
+msgid "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
+msgstr "<b>OR</b> the wallet seed of <b>all</b> copayers in the wallet"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>OR</b> the wallet seeds of <b>all</b> GroestlPayers in the wallet"
+msgid "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
+msgstr "<b>OR</b> the wallet seeds of <b>all</b> copayers in the wallet"
 
 #: public/views/splash.html
 msgid "A multisignature groestlcoin wallet"
@@ -69,7 +69,7 @@ msgstr "Sobre a Groestlcoin Mobile Wallet"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -156,7 +156,7 @@ msgstr "Aplicar alterações"
 msgid "Are you sure you want to delete the backup words?"
 msgstr "Are you sure you want to delete the backup words?"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "Tem certeza que deseja excluir esta carteira?"
@@ -232,11 +232,11 @@ msgstr "Transmitindo transação"
 msgid "Browser unsupported"
 msgstr "Navegador não suportado"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/walletHome.html
 #: public/views/modals/confirmation.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
@@ -268,7 +268,7 @@ msgstr "Choose a wallet to send funds"
 
 #: public/views/includes/topbar.html
 #: public/views/modals/advancedSend.html
-#: public/views/modals/GroestlPayers.html
+#: public/views/modals/copayers.html
 #: public/views/modals/customized-amount.html
 #: public/views/modals/paypro.html
 #: public/views/modals/scanner.html
@@ -285,7 +285,7 @@ msgid "Commit hash"
 msgstr "Commit de hash"
 
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -308,22 +308,22 @@ msgid "Connecting to {{join.hwWallet}} Wallet..."
 msgstr "Connecting to {{join.hwWallet}} Wallet..."
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer already in this wallet"
+msgid "copayer already in this wallet"
 msgstr "Groestlcoin Mobile Walleter already in this wallet"
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer already voted on this spend proposal"
+msgid "copayer already voted on this spend proposal"
 msgstr "Groestlcoin Mobile Walleter already voted on this spend proposal"
 
 #: src/js/services/bwsError.js
-msgid "GroestlPayer data mismatch"
+msgid "copayer data mismatch"
 msgstr "Groestlcoin Mobile Walleter data mismatch"
 
-#: public/views/modals/GroestlPayers.html
-msgid "GroestlPayers"
+#: public/views/modals/copayers.html
+msgid "copayers"
 msgstr "Groestlcoin Mobile Walleters"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/walletHome.js
 msgid "Copied to clipboard"
@@ -422,8 +422,8 @@ msgid "Create"
 msgstr "Criar"
 
 #: public/views/create.html
-msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
-msgstr "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
+msgid "Create {{requiredcopayers}}-of-{{totalcopayers}} wallet"
+msgstr "Create {{requiredcopayers}}-of-{{totalcopayers}} wallet"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -463,7 +463,7 @@ msgstr "Data"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Delete it and create a new one"
 msgstr "Apagar e criar um novo"
 
@@ -767,7 +767,7 @@ msgstr "Invalid"
 msgid "Invalid address"
 msgstr "Invalid address"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Invitation to share a GroestlPay Wallet"
 msgstr "Invitation to share a Groestlcoin Mobile Wallet Wallet"
 
@@ -788,7 +788,7 @@ msgstr "John"
 msgid "Join"
 msgstr "Participar"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 msgstr "Join my Groestlcoin Mobile Wallet wallet. Here is the invitation code: {{secret}} You can download Groestlcoin Mobile Wallet for your phone or desktop at https://GroestlPay.io"
 
@@ -844,8 +844,8 @@ msgstr "Fazer um pagamento para"
 msgid "me"
 msgstr "me"
 
-#: public/views/includes/GroestlPayers.html
-#: public/views/modals/GroestlPayers.html
+#: public/views/includes/copayers.html
+#: public/views/modals/copayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 msgid "Me"
@@ -1011,11 +1011,11 @@ msgid "Payment Proposal Rejected"
 msgstr "Proposta de Pagamento Rejeitada"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by GroestlPayer"
+msgid "Payment Proposal Rejected by copayer"
 msgstr "Proposta de Pagamento Rejeitada pelo Groestlcoin Mobile Walleter"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by GroestlPayer"
+msgid "Payment Proposal Signed by copayer"
 msgstr "Proposta de Pagamento Assinada pelo Groestlcoin Mobile Walleter"
 
 #: public/views/walletHome.html
@@ -1309,13 +1309,13 @@ msgstr "configurações"
 msgid "Share address"
 msgstr "Compartilhar endereço"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Share invitation"
 msgstr "Compartilhar convite"
 
-#: public/views/GroestlPayers.html
-msgid "Share this invitation with your GroestlPayers"
-msgstr "Compartilhe este convite com seus GroestlPayers"
+#: public/views/copayers.html
+msgid "Share this invitation with your copayers"
+msgstr "Compartilhe este convite com seus copayers"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments. To protect your privacy, new addresses are generated automatically once you use them."
@@ -1369,7 +1369,7 @@ msgstr "Spend proposal not found"
 msgid "Still not done"
 msgstr "Still not done"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1443,7 +1443,7 @@ msgstr "The software you are about to use functions as a free, open source, and 
 msgid "The spend proposal is not pending"
 msgstr "The spend proposal is not pending"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "A carteira “{{walletName}}” foi removida"
@@ -1497,8 +1497,8 @@ msgid "Total Locked Balance"
 msgstr "Saldo Total Bloqueado"
 
 #: public/views/create.html
-msgid "Total number of GroestlPayers"
-msgstr "Total number of GroestlPayers"
+msgid "Total number of copayers"
+msgstr "Total number of copayers"
 
 #: public/views/modals/tx-details.html
 msgid "Transaction"
@@ -1568,11 +1568,11 @@ msgstr "﻿Versão"
 msgid "View"
 msgstr "View"
 
-#: public/views/GroestlPayers.html
-msgid "Waiting for GroestlPayers"
-msgstr "Aguardando GroestlPayers"
+#: public/views/copayers.html
+msgid "Waiting for copayers"
+msgstr "Aguardando copayers"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Waiting..."
 msgstr "Aguardando…"
 
@@ -1608,7 +1608,7 @@ msgstr "Wallet Export"
 msgid "Wallet Id"
 msgstr "Wallet Id"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Wallet incomplete and broken"
 msgstr "Carteira incompleta e quebrada"
 
