--- a/i18n/po/zh.po
+++ b/i18n/po/zh.po
@@ -35,7 +35,7 @@ msgstr "扣除黑币网络费用 {{fee}}"
 msgid "{{feeRateStr}} of the transaction"
 msgstr "交易的{{feeRateStr}}"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 #: public/views/includes/walletInfo.html
 msgid "{{index.m}}-of-{{index.n}}"
 msgstr "{{index.n}} 分之 {{index.m}}"
@@ -53,24 +53,24 @@ msgid "{{item.m}}-of-{{item.n}}"
 msgstr "{{item.n}} 分之 {{item.m}}"
 
 #: public/views/modals/txp-details.html
-msgid "* A payment proposal can be deleted if 1) you are the creator, and no other GroestlPayer has signed, or 2) 24 hours have passed since the proposal was created."
-msgstr "* 如果 1) 你是创造者，及没有其他 GroestlPayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
+msgid "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
+msgstr "* 如果 1) 你是创造者，及没有其他 copayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
 
 #: public/views/includes/terms.html
 msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
 msgstr "<b>如果你无法访问你的 Groestlcoin Mobile Wallet 钱包或加密私钥，及你没有分开储存钱包备份和相应密码，你承认并同意有关 Groestlcoin Mobile Wallet 钱包里的任何黑币将不可被存取。</b>"
 
 #: public/views/backup.html
-msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other GroestlPayers)."
-msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 GroestlPayers 的 2 钱包恢复短语)。"
+msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
+msgstr "<b>或</b> 1 钱包导出文件和钱包恢复短语的剩余法定人数 (例如在 3-5 钱包︰1 钱包导出文件 + 任何其他 copayers 的 2 钱包恢复短语)。"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> GroestlPayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrase of <b>all</b> copayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
 
 #: public/views/backup.html
-msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> GroestlPayers in the wallet"
-msgstr "<b>或</b> 钱包里的 <b>所有</b> GroestlPayers 的钱包恢复短语"
+msgid "<b>OR</b> the wallet recovery phrases of <b>all</b> copayers in the wallet"
+msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
 
 #: public/views/disclaimer.html
 msgid "A multisignature groestlcoin wallet"
@@ -82,7 +82,7 @@ msgstr "GroestlPay 简介"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Accept"
@@ -182,7 +182,7 @@ msgstr "已转换的数额"
 msgid "Are you sure you want to delete the recovery phrase?"
 msgstr "你确定要删除恢复短语吗?"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "Are you sure you want to delete this wallet?"
 msgstr "确定要删除这个钱包吗？"
@@ -286,13 +286,13 @@ msgstr "正在计算费用"
 #: public/views/modals/confirmation.html
 #: public/views/walletHome.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Cancel"
 msgstr "取消"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Cancel and delete the wallet"
 msgstr "取消并删除钱包"
 
@@ -353,7 +353,7 @@ msgstr "提交哈希"
 
 #: public/views/includes/confirm-tx.html
 #: src/js/services/confirmDialog.js
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 #: src/js/controllers/walletHome.js
 msgid "Confirm"
@@ -388,22 +388,22 @@ msgid "Continue"
 msgstr "继续"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer already in this wallet"
-msgstr "GroestlPayer 已经在这个钱包里"
+msgid "copayer already in this wallet"
+msgstr "copayer 已经在这个钱包里"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer already voted on this spend proposal"
-msgstr "GroestlPayer 已经表决此花费提议"
+msgid "copayer already voted on this spend proposal"
+msgstr "copayer 已经表决此花费提议"
 
 #: src/js/services/bwcError.js
-msgid "GroestlPayer data mismatch"
-msgstr "GroestlPayer 的数据不匹配"
+msgid "copayer data mismatch"
+msgstr "copayer 的数据不匹配"
 
 #: public/views/preferencesInformation.html
-msgid "GroestlPayers"
-msgstr "GroestlPayers"
+msgid "copayers"
+msgstr "copayers"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/preferencesInformation.js
 #: src/js/controllers/walletHome.js
@@ -507,8 +507,8 @@ msgid "Create"
 msgstr "创建"
 
 #: public/views/create.html
-msgid "Create {{requiredGroestlPayers}}-of-{{totalGroestlPayers}} wallet"
-msgstr "创建{{totalGroestlPayers}}-的-{{requiredGroestlPayers}} 的钱包"
+msgid "Create {{requiredcopayers}}-of-{{totalcopayers}} wallet"
+msgstr "创建{{totalcopayers}}-的-{{requiredcopayers}} 的钱包"
 
 #: public/views/add.html
 #: public/views/create.html
@@ -547,7 +547,7 @@ msgstr "日期"
 msgid "Decrypting a paper wallet could take around 5 minutes on this device. please be patient and keep the app open."
 msgstr "在此设备上解密纸钱包可能需要大约 5 分钟。请耐心等候并保持程序开着。"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Delete it and create a new one"
 msgstr "删除并创建新的"
 
@@ -892,7 +892,7 @@ msgstr "地址无效"
 msgid "Invalid derivation path"
 msgstr "衍生路径无效"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Invitation to share a GroestlPay Wallet"
 msgstr "邀请分享 GroestlPay 钱包"
 
@@ -913,7 +913,7 @@ msgstr "John"
 msgid "Join"
 msgstr "加入"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 msgstr "加入我的 GroestlPay 钱包。这是邀请码 ︰ {{secret}} 你可以在 https://GroestlPay.io 下载 GroestlPay 到你的手机或桌式电脑"
 
@@ -973,7 +973,7 @@ msgstr "匹配："
 msgid "me"
 msgstr "我"
 
-#: public/views/includes/GroestlPayers.html
+#: public/views/includes/copayers.html
 #: public/views/modals/tx-details.html
 #: public/views/modals/txp-details.html
 #: public/views/preferencesInformation.html
@@ -1192,12 +1192,12 @@ msgid "Payment Proposal Rejected"
 msgstr "支付提议已被拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Rejected by GroestlPayer"
-msgstr "支付提议已被 GroestlPayer 拒绝"
+msgid "Payment Proposal Rejected by copayer"
+msgstr "支付提议已被 copayer 拒绝"
 
 #: src/js/services/notificationsService.js
-msgid "Payment Proposal Signed by GroestlPayer"
-msgstr "支付提议已获 GroestlPayer 签名"
+msgid "Payment Proposal Signed by copayer"
+msgstr "支付提议已获 copayer 签名"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1531,13 +1531,13 @@ msgstr "设置"
 msgid "Share address"
 msgstr "共享地址"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Share invitation"
 msgstr "共享邀请"
 
-#: public/views/GroestlPayers.html
-msgid "Share this invitation with your GroestlPayers"
-msgstr "将此邀请与你的 GroestlPayers 共享"
+#: public/views/copayers.html
+msgid "Share this invitation with your copayers"
+msgstr "将此邀请与你的 copayers 共享"
 
 #: public/views/walletHome.html
 msgid "Share this wallet address to receive payments"
@@ -1596,7 +1596,7 @@ msgstr "需要支付密码"
 msgid "Spending Passwords do not match"
 msgstr "支付密码不匹配"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
 #: src/js/controllers/import.js
 #: src/js/controllers/preferencesDelete.js
@@ -1677,7 +1677,7 @@ msgstr "你将使用的软件是一个免费、开放源代码和多重签名的
 msgid "The spend proposal is not pending"
 msgstr "花费提议不是未决"
 
-#: src/js/controllers/GroestlPayers.js
+#: src/js/controllers/copayers.js
 #: src/js/controllers/preferencesDelete.js
 msgid "The wallet \"{{walletName}}\" was deleted"
 msgstr "\"{{walletName}}\"钱包已删除"
@@ -1742,8 +1742,8 @@ msgid "Total Locked Balance"
 msgstr "锁定结余的总额"
 
 #: public/views/create.html
-msgid "Total number of GroestlPayers"
-msgstr "GroestlPayers 的总数"
+msgid "Total number of copayers"
+msgstr "copayers 的总数"
 
 #: src/js/services/fingerprintService.js
 msgid "Touch ID Failed"
@@ -1819,9 +1819,9 @@ msgstr "版本"
 msgid "View"
 msgstr "查看"
 
-#: public/views/GroestlPayers.html
-msgid "Waiting for GroestlPayers"
-msgstr "正在等待 GroestlPayers"
+#: public/views/copayers.html
+msgid "Waiting for copayers"
+msgstr "正在等待 copayers"
 
 #: src/js/services/onGoingProcess.js
 msgid "Waiting for Ledger..."
@@ -1831,7 +1831,7 @@ msgstr "正在等待 Ledger..."
 msgid "Waiting for Trezor..."
 msgstr "正在等待 Trezor..."
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Waiting..."
 msgstr "等待中..."
 
@@ -1855,7 +1855,7 @@ msgstr "钱包导出"
 msgid "Wallet Id"
 msgstr "钱包 Id"
 
-#: public/views/GroestlPayers.html
+#: public/views/copayers.html
 msgid "Wallet incomplete and broken"
 msgstr "钱包不完整和损坏"
 
